updted package section 1

--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,7 @@
                 overflow-wrap: break-word;
             }
         </style>
-        <section id="packages" class="section relative">
+        <section id="packages" class="section relative" data-vertical-scroll="true">
             <!-- Enhanced Background with Pattern -->
             <div class="absolute inset-0 z-0">
                 <div class="w-full h-full bg-gradient-to-br from-slate-900 via-purple-900 to-slate-800"></div>
