--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,7 @@
                 overflow-wrap: break-word;
             }
         </style>
-        <section id="packages" class="section relative" data-vertical-scroll="true">
+        <section id="packages" class="section relative" data-allow-vertical-scroll="true">
             <!-- Enhanced Background with Pattern -->
             <div class="absolute inset-0 z-0">
                 <div class="w-full h-full bg-gradient-to-br from-slate-900 via-purple-900 to-slate-800"></div>
@@ -1985,7 +1985,7 @@
                             </div>
 
                             <button onclick="openPackageModal('essential')"
-                                class="btn w-full bg-slate-700 hover:bg-orange-500 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
+                                class="btn w-full bg-gradient-to-r from-orange-500 to-amber-500 hover:from-orange-600 hover:to-amber-600 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
                                 Select Essential
                             </button>
                         </div>
@@ -2021,7 +2021,7 @@
                             </div>
 
                             <button onclick="openPackageModal('professional')"
-                                class="btn w-full bg-purple-500 hover:bg-purple-400 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
+                                class="btn w-full bg-gradient-to-r from-purple-500 to-indigo-500 hover:from-purple-600 hover:to-indigo-600 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
                                 Select Professional
                             </button>
                         </div>
@@ -2051,7 +2051,7 @@
                             </div>
 
                             <button onclick="openPackageModal('premium')"
-                                class="btn w-full bg-slate-700 hover:bg-blue-500 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
+                                class="btn w-full bg-gradient-to-r from-blue-500 to-cyan-500 hover:from-blue-600 hover:to-cyan-600 text-white py-4 rounded-lg font-semibold transition-all duration-300 group-hover:scale-105">
                                 Select Premium
                             </button>
                         </div>
@@ -2085,7 +2085,7 @@
                                 </div>
 
                                 <button onclick="openPackageModal('essential')"
-                                    class="btn w-full bg-slate-700 hover:bg-orange-500 text-white py-3 rounded-lg font-semibold transition-all duration-300">
+                                    class="btn w-full bg-gradient-to-r from-orange-500 to-amber-500 hover:from-orange-600 hover:to-amber-600 text-white py-3 rounded-lg font-semibold transition-all duration-300">
                                     Select Essential
                                 </button>
                             </div>
@@ -2121,7 +2121,7 @@
                                 </div>
 
                                 <button onclick="openPackageModal('professional')"
-                                    class="btn w-full bg-purple-500 hover:bg-purple-400 text-white py-3 rounded-lg font-semibold transition-all duration-300">
+                                    class="btn w-full bg-gradient-to-r from-purple-500 to-indigo-500 hover:from-purple-600 hover:to-indigo-600 text-white py-3 rounded-lg font-semibold transition-all duration-300">
                                     Select Professional
                                 </button>
                             </div>
@@ -2151,7 +2151,7 @@
                                 </div>
 
                                 <button onclick="openPackageModal('premium')"
-                                    class="btn w-full bg-slate-700 hover:bg-blue-500 text-white py-3 rounded-lg font-semibold transition-all duration-300">
+                                    class="btn w-full bg-gradient-to-r from-blue-500 to-cyan-500 hover:from-blue-600 hover:to-cyan-600 text-white py-3 rounded-lg font-semibold transition-all duration-300">
                                     Select Premium
                                 </button>
                             </div>
@@ -2179,7 +2179,6 @@
                 </div>
             </div>
         </section>
-
         <style>
             /* Enhanced package card styles */
             .package-card {
@@ -2265,6 +2264,170 @@
                 border: 1px solid rgba(255, 255, 255, 0.1);
             }
         </style>
+
+        <script>
+            // Add these package modal functions back to your JavaScript
+
+            // Package Modal Functions
+            let selectedPackage = '';
+
+            function openPackageModal(packageType) {
+                selectedPackage = packageType;
+                const modal = document.getElementById('packageModal');
+
+                // Set package details based on type
+                setPackageDetails(packageType);
+
+                modal.classList.remove('hidden');
+                setTimeout(() => {
+                    modal.classList.add('show');
+                }, 10);
+                document.body.style.overflow = 'hidden';
+            }
+
+            function closePackageModal() {
+                const modal = document.getElementById('packageModal');
+                modal.classList.remove('show');
+                setTimeout(() => {
+                    modal.classList.add('hidden');
+                }, 300);
+                document.body.style.overflow = 'auto';
+                selectedPackage = '';
+            }
+
+            function setPackageDetails(packageType) {
+                const packages = {
+                    essential: {
+                        name: 'Essential Package',
+                        price: '$3,800',
+                        description: 'Professional live recording with comprehensive 13-camera coverage for basic to medium events.',
+                        features: [
+                            '13-Camera Video Capturing',
+                            'Professional Video Directing',
+                            'Multi-Angle Coverage',
+                            'Basic Audio Recording',
+                            'Professional Camera Operators',
+                            '1080p HD Quality',
+                            '8 Hours Coverage',
+                            'Standard Equipment Setup',
+                            'Live Switching Capability',
+                            'Direct Monitoring'
+                        ],
+                        audience: 'Church services, small concerts, corporate events, conferences, basic live productions'
+                    },
+                    professional: {
+                        name: 'Professional Package',
+                        price: '$5,700',
+                        description: 'Advanced production with extensive 22-camera coverage for high-quality live events and broadcasts.',
+                        features: [
+                            '22-Camera Video Capturing',
+                            'Advanced Video Directing',
+                            'Comprehensive Multi-Angle Coverage',
+                            'Professional Audio Recording',
+                            'Expert Camera Operators + Director',
+                            '4K Ultra HD Quality',
+                            'Basic Post Production',
+                            'Live Streaming Setup',
+                            '12 Hours Coverage',
+                            'Professional Lighting Setup',
+                            'Real-time Video Mixing',
+                            'Audio Post-Processing'
+                        ],
+                        audience: 'Large church events, concerts, conferences, weddings, broadcast-quality productions'
+                    },
+                    premium: {
+                        name: 'Premium Package',
+                        price: '$7,600',
+                        description: 'Broadcast-grade production with comprehensive 22-camera coverage and full post-production suite.',
+                        features: [
+                            '22-Camera Video Capturing',
+                            'Premium Video Directing',
+                            'Extensive Multi-Angle Coverage',
+                            'Professional Audio Engineering',
+                            'Expert Camera Operators + Director',
+                            '4K Ultra HD Quality + Drone Footage',
+                            'Full Post Production Suite',
+                            'Live Streaming + Recording',
+                            'Color Grading & Graphics',
+                            'Dedicated Project Manager',
+                            '16 Hours Coverage',
+                            'Cinematic Lighting Setup',
+                            'Broadcast-Quality Output',
+                            'Custom Graphics Package'
+                        ],
+                        audience: 'Major concerts, festivals, large church events, corporate broadcasts, professional productions'
+                    }
+                };
+
+                const package = packages[packageType];
+                if (!package) return;
+
+                document.getElementById('packageModalTitle').textContent = package.name;
+                document.getElementById('packagePrice').textContent = package.price;
+                document.getElementById('packageName').textContent = package.name;
+                document.getElementById('packageDescription').textContent = package.description;
+                document.getElementById('packageAudience').textContent = package.audience;
+
+                // Build features list
+                const featuresList = document.getElementById('packageFeatures');
+                featuresList.innerHTML = '';
+                package.features.forEach(feature => {
+                    const li = document.createElement('li');
+                    li.className = 'flex items-center';
+                    li.innerHTML = `<i class="fas fa-check text-accent-yellow mr-3"></i><span>${feature}</span>`;
+                    featuresList.appendChild(li);
+                });
+            }
+
+            function proceedWithPackage() {
+                closePackageModal();
+
+                // Scroll to contact section after a brief delay
+                setTimeout(() => {
+                    scrollToSection('contact');
+
+                    // Pre-fill the contact form
+                    setTimeout(() => {
+                        const projectTypeField = document.querySelector('input[placeholder="Project Type"]');
+                        if (projectTypeField) {
+                            const packageName = document.getElementById('packageName').textContent;
+                            projectTypeField.value = `${packageName} - Live Recording`;
+                        }
+
+                        // Show success message
+                        const successMessage = document.createElement('div');
+                        successMessage.className = 'fixed top-4 right-4 bg-green-500 text-white px-6 py-3 rounded-lg shadow-lg z-50 animate-fade-in';
+                        successMessage.innerHTML = `<i class="fas fa-check-circle mr-2"></i> ${packageName} selected! Please complete the form below.`;
+                        document.body.appendChild(successMessage);
+
+                        setTimeout(() => {
+                            successMessage.remove();
+                        }, 5000);
+                    }, 500);
+                }, 300);
+            }
+
+            // Update the escape key handler to include package modal
+            document.addEventListener('keydown', function (e) {
+                if (e.key === 'Escape') {
+                    closePackageModal();
+                    closeVideoModal(); // Keep existing video modal functionality
+                }
+            });
+
+            // Add fade-in animation for success message
+            const style = document.createElement('style');
+            style.textContent = `
+    @keyframes fade-in {
+        from { opacity: 0; transform: translateY(-10px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+        animation: fade-in 0.3s ease-out;
+    }
+`;
+            document.head.appendChild(style);
+        </script>
         <!-- Portfolio Section -->
         <section id="portfolio" class="section">
             <div class="container max-w-7xl mx-auto px-4 py-4 h-full flex items-center">
